# correctionlib-gradients

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE.txt  README.md  my-script.py  notes.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.md
src/correctionlib_gradients/: __about__.py  __init__.py  _base.py  _category_with_grad.py  _compound_binning.py  _correction_with_gradient.py  _correctiondag.py  _differentiable_spline.py  _formuladag.py  _spline_with_grad.py  _typedefs.py  _utils.py
tests/: test_base.py  test_correction_with_gradient.py
